<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#369"
    android:orientation="vertical"
    tools:context="com.example.input.MainActivity"
    tools:ignore="MergeRootFrame" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:background="#369" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/app_name"
            android:textColor="#fff"
            android:textSize="25sp" 
            android:textStyle="bold"
            />
    </RelativeLayout>

    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/wifimac"
        android:textColor="#fff"
        android:textSize="20sp"
        />
    <TextView 
        android:id="@+id/iniwifimac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:text="@string/wifimac"
        android:textColor="#fff"
        android:textSize="23sp"
        />
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:text="@string/btaddr"
        android:textColor="#fff"
        android:textSize="20sp"
        />
    <TextView 
        android:id="@+id/inibtaddr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:text="@string/btaddr"
        android:textColor="#fff"
        android:textSize="23sp"
        />
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:text="@string/sn"
        android:textColor="#fff"
        android:textSize="20sp"
        />
    <TextView 
        android:id="@+id/inisn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:text="@string/sn"
        android:textColor="#fff"
        android:textSize="23sp"
        />
   <LinearLayout 
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical"
       android:background="#fff"
       >
       <View 
           android:layout_width="match_parent"
           android:layout_height="30dip"
           android:background="#369"
           />
       <RelativeLayout 
        android:id="@+id/change"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/layout_selector1"
        android:clickable="true"
        android:onClick="change"
        >
        <TextView         
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/change"
        android:textSize="20sp"
        android:textColor="#fff"
        android:layout_marginTop="20dp"
        />   
    </RelativeLayout>
   </LinearLayout>
    

</LinearLayout>